# ml-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
LinAlg/: main.cpp
examples/: gd_demo.cpp  linalg_example.cpp  mc_benchmark.cpp  mc_demo.cpp  multi_linreg_example.cpp  ols_example.cpp  plots_example.cpp
linalg/: CMakeLists.txt
linalg/examples/: main.cpp
linalg/include/: linalg.hpp  matrix.h  matrix_helpers.h
linalg/include/core/: Matrix.h  MatrixHelpers.h
linalg/src/: matrix.cpp  matrix_helpers.cpp
linalg/src/core/: Matrix.cpp  MatrixHelpers.cpp
linalg/tests/: test_matrix.cpp
monte_carlo/: CMakeLists.txt
monte_carlo/include/: black_scholes.h  gbm.h  mc_async.h  mc_pool.h  mc_serial.h  payoff.h  thread_pool.h
monte_carlo/src/: black_scholes.cpp  gbm.cpp  mc_async.cpp  mc_pool.cpp  mc_serial.cpp  thread_pool.cpp
ols/: CMakeLists.txt
ols/examples/: main.cpp
ols/include/: data_gen.h  lin_reg.h
ols/include/core/: LinReg.h  data_gen.h
ols/src/: data_gen.cpp  lin_reg.cpp
ols/src/core/: LinReg.cpp  data_gen.cpp
optimizers/: CMakeLists.txt
optimizers/examples/: gd_demo.cpp
optimizers/include/: gradient_descent.h  optimizers_helpers.h  scalers.h
optimizers/src/: gradient_descent.cpp  optimizers_helpers.cpp  scalers.cpp
plots/: CMakeLists.txt
plots/include/: plots.h
plots/src/: plots.cpp
